feat(parsers): added parsers and loading bonus

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,9 @@ features:
   expireTime: 60
   # Ativar/Desativar hologramas
   holograms: true
+  # Mundo em que irá funcionar o sistema
+  world: 'minerar'
+
 
 bonus:
   level-one:
